--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -1,4 +1,5 @@
-.kscr-Card, .kscr-Card-Results {
+.kscr-Card,
+.kscr-Card-Results {
   color: @cardTextColor;
   font-size: 14px;
   font-family: @secondaryFontFamily;
@@ -350,7 +351,7 @@
 
 @media screen and (min-width: @largeFormatMin) {
   .kscr-Card {
-    margin: 0;
+    margin: 3px 0 0;
     border: none;
   }
 
